--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Dogs Trainning"
+APP_NAME="Sitios Turisticos"
 APP_ENV=local
 APP_KEY=FAqpOlyCQGuJVlXdgqCdxpsFQ8fgfMuI
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=DogsTrainning
+DB_DATABASE=SitiosTuristicos
 DB_USERNAME=prueba
 DB_PASSWORD=12345678
 
@@ -27,4 +27,4 @@ MAIL_USERNAME=pasthortownchessmaster@gmail.com
 MAIL_PASSWORD=2401Yavirac*
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=pasthortownchessmaster@gmail.com
-MAIL_FROM_NAME="Dogs Trainning"
+MAIL_FROM_NAME="Sitios Turisticos"
